--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@azure/communication-call-automation": "^1.2.0",
+    "@azure/communication-identity": "^1.3.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   },
